# syosetu_novel_downloader

./: .gitignore  LICENSE  README.md  custom_typing.py  mia.py  mian.py  pyproject.toml  requirements.txt  syosetu.py
converters/: __init__.py  txt2epub.py
examples/ティアムーン帝国物語　～断頭台から始まる、姫の転生逆転ストーリー～/: 第一部　断頭台の姫君.epub  第一部　断頭台の姫君.txt  第七部　輝け！　黄金の海月の灯台.epub  第七部　輝け！　黄金の海月の灯台.txt  第三部　月と星々の新たなる盟約.epub  第三部　月と星々の新たなる盟約.txt  第二部　導(しるべ)の少女.epub  第二部　導(しるべ)の少女.txt  第五部　皇女の休日.epub  第五部　皇女の休日.txt  第八部　第二次司教帝選挙～女神肖像画の謎を追え！～.epub  第八部　第二次司教帝選挙～女神肖像画の謎を追え！～.txt  第六部　馬夏(まなつ)の青星夜(よ)の満月夢(ゆめ).epub  第六部　馬夏(まなつ)の青星夜(よ)の満月夢(ゆめ).txt  第四部　その月の導く明日へ.epub  第四部　その月の導く明日へ.txt
examples/義姉と間違えて求婚されました/: 義姉と間違えて求婚されました.epub  義姉と間違えて求婚されました.txt
